elements/rh-breadcrumb/rh-breadcrumb-lightdom.css
rh-breadcrumb {
  /* stylelint-disable-next-line max-line-length */
  --_breadcrumb-caret-image-default: var(--rh-breadcrumb-caret-image, url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='15' viewBox='0 0 10 15' fill='none'%3E%3Cg clip-path='url(%23clip0_232_19576)'%3E%3Cpath d='M2.5 14.5L0.5 12.5L5.5 7.5L0.5 2.5L2.5 0.5L9.5 7.5L2.5 14.5Z' fill='%23000000'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_232_19576'%3E%3Crect width='10' height='14' fill='white' transform='matrix(-1 0 0 1 10 0.5)'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E"));
  /* stylelint-disable-next-line max-line-length */
  --_breadcrumb-caret-image-subtle: var(--rh-breadcrumb-caret-image-subtle, url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='15' viewBox='0 0 10 15' fill='none'%3E%3Cg clip-path='url(%23clip0_232_19576)'%3E%3Cpath d='M2.5 14.5L0.5 12.5L5.5 7.5L0.5 2.5L2.5 0.5L9.5 7.5L2.5 14.5Z' fill='%23707070'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_232_19576'%3E%3Crect width='10' height='14' fill='white' transform='matrix(-1 0 0 1 10 0.5)'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E"));
  --_breadcrumb-link-color:
    var(
        --rh-breadcrumb-link-color,
        var(--rh-color-interactive-blue-darker, #0066cc)
      );
  --_breadcrumb-link-current-page:
    var(
        --rh-breadcrumb-link-current-page,
        var(--rh-color-text-primary-on-light, #151515)
      );
  --_breadcrumb-link-current-page-subtle:
    var(
        --rh-breadcrumb-link-current-page-subtle,
        var(--rh-color-text-secondary-on-light, #4d4d4d)
      );
  --_breadcrumb-link-color-visited:
    var(
        --rh-breadcrumb-link-color,
        var(--rh-color-interactive-purple-darker, #5e40be)
      );
  --_breadcrumb-link-color-visited-hover:
    var(
        --rh-breadcrumb-link-color-visited-hover,
        var(--rh-color-interactive-purple-darkest, #21134d)
      );
  --_breadcrumb-link-color-focus:
    var(
        --rh-breadcrumb-link-color-focus,
        var(--rh-color-border-interactive-on-light, #0066cc)
      );
  --_breadcrumb-link-color-focus-outline-color:
    var(
        --rh-breadcrumb-link-color-focus-outline-color,
        var(--rh-color-border-interactive-on-light, #0066cc)
      );

  display: block;
}

rh-breadcrumb ol {
  container-type: inline-size;
  container-name: breadcrumbs-list;
  font-size: var(--rh-font-size-body-text-sm, 0.875rem);
  line-height: var(--rh-line-height-body-text, 1.5);
  margin-block: 0;
  padding-inline-start: 0;
}

rh-breadcrumb > ol > li {
  background-image: var(--_breadcrumb-caret-image-default);
  background-position: calc(100% - 14px) center;
  background-repeat: no-repeat;
  background-size: 10px;
  display: inline-block;
  padding-inline-end: var(--rh-breadcrumb-li-padding-inline-end, 42px);
  vertical-align: bottom;
}

rh-breadcrumb[variant="subtle"] > ol > li {
  background-image: var(--_breadcrumb-caret-image-subtle);
}

rh-breadcrumb > ol > li:first-child {
  padding-inline-start: 0;
}

rh-breadcrumb > ol > li:last-child {
  background-image: none;
}

rh-breadcrumb > ol > li,
rh-breadcrumb > ol > li > a {
  color: var(--_breadcrumb-link-color);
}

rh-breadcrumb > ol > li > a {
  text-decoration: none;
}

rh-breadcrumb > ol > li > a:is(:hover, :focus) {
  text-decoration: underline;
}

rh-breadcrumb > ol > li > a:is(:focus, :focus-visible) {
  outline: 2px solid var(--_breadcrumb-link-color-focus-outline-color);
  border-radius: var(--rh-border-radius-default, 3px);
}

rh-breadcrumb > ol > li:first-child > a {
  margin-inline-start: 0;
}

rh-breadcrumb > ol > li > a:visited {
  color: var(--_breadcrumb-link-color-visited);
}

rh-breadcrumb > ol > li > a:visited:hover {
  color: var(--_breadcrumb-link-color-visited-hover);
}

rh-breadcrumb > ol > li:last-child,
rh-breadcrumb > ol > li > a[aria-current="page"] {
  color: var(--_breadcrumb-link-current-page);
}

rh-breadcrumb[variant="subtle"] > ol > li:last-child,
rh-breadcrumb[variant="subtle"] > ol > li > a[aria-current="page"] {
  color: var(--_breadcrumb-link-current-page-subtle);
}

@container breadcrumbs-list (min-width: 992px) {
  rh-breadcrumb > ol > li:last-child {
    max-width: none;
  }
}

